fix OpenAPI paths
