# api/v1/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.3"
+openapi: 3.0.3
 info:
   version: 1.0.0
   title: Financier API
@@ -10,9 +10,9 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: /api/v1
+  - url: /
 paths:
-  /accounts:
+  /api/v1/accounts:
     get:
       tags:
         - Accounts
@@ -59,7 +59,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /accounts/{id}:
+  /api/v1/accounts/{id}:
     get:
       tags:
         - Accounts
